Updated POM configuration.