@@ -116,8 +116,8 @@
                                     <ignore />
                                  </action>
                               </pluginExecution>
-                              <!-- Build helper plugin configuration -->
                               <pluginExecution>
+                                 <!-- Build helper plugin configuration -->
                                  <pluginExecutionFilter>
                                     <groupId>org.codehaus.mojo</groupId>
                                     <artifactId>build-helper-maven-plugin</artifactId>
@@ -284,9 +284,9 @@
       <plugin.ant.version>1.8</plugin.ant.version>
       <plugin.assembly.version>2.6</plugin.assembly.version>
       <plugin.buildhelper.version>1.7</plugin.buildhelper.version>
-      <plugin.checkstyle.version>2.16</plugin.checkstyle.version>
       <plugin.changes.version>2.11</plugin.changes.version>
-      <plugin.clean.version>2.6.1</plugin.clean.version>
+      <plugin.checkstyle.version>2.16</plugin.checkstyle.version>
+      <plugin.clean.version>3.0.0</plugin.clean.version>
       <plugin.compiler.version>3.3</plugin.compiler.version>
       <plugin.cxf.version>2.7.18</plugin.cxf.version>
       <plugin.dependency.version>2.10</plugin.dependency.version>
@@ -311,6 +311,10 @@
       <plugin.source.version>2.4</plugin.source.version>
       <plugin.surefire.version>2.18.1</plugin.surefire.version>
       <plugin.taglist.version>2.4</plugin.taglist.version>
+      <!-- Extensions versions -->
+      <extension.wagon.version>2.10</extension.wagon.version>
+      <!-- Maven Site -->
+      <site.skin.version>0.2.4</site.skin.version>
    </properties>
 
    <!-- ********************************************** -->
@@ -837,6 +841,15 @@
 
    <build>
       <defaultGoal>clean package</defaultGoal>
+      <extensions>
+         <extension>
+            <!-- Wagon -->
+            <!-- Enables the use of FTP. -->
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-ftp</artifactId>
+            <version>${extension.wagon.version}</version>
+         </extension>
+      </extensions>
       <pluginManagement>
          <plugins>
             <!-- The following plugins always appear on the plugins list, 
@@ -910,72 +923,69 @@
             <artifactId>maven-enforcer-plugin</artifactId>
             <version>${plugin.enforcer.version}</version>
             <executions>
+               <!-- The enforce goal is bound to the validate phase -->
                <execution>
-                  <id>enforce</id>
+                  <id>enforce-javaVersion</id>
+                  <goals>
+                     <goal>enforce</goal>
+                  </goals>
+                  <configuration>
+                     <rules>
+                        <!-- Not obsolete JDK. -->
+                        <requireJavaVersion>
+                           <version>[${maven.compiler.source},)</version>
+                        </requireJavaVersion>
+                     </rules>
+                  </configuration>
+               </execution>
+               <execution>
+                  <id>enforce-convergence</id>
+                  <goals>
+                     <goal>enforce</goal>
+                  </goals>
                   <configuration>
                      <rules>
                         <!-- Dependencies convergence. -->
-                        <!-- This is a less restrictive version of the rule. -->
+                        <!-- This variant of the rule requires less configuration, 
+                           making use of Maven's dependency resolver. -->
                         <requireUpperBoundDeps />
-                        <!-- Not obsolete JDK. -->
-                        <requireJavaVersion>
-                           <version>[1.7,)</version>
-                        </requireJavaVersion>
+                     </rules>
+                  </configuration>
+               </execution>
+               <execution>
+                  <id>enforce-pluginVersion</id>
+                  <goals>
+                     <goal>enforce</goal>
+                  </goals>
+                  <configuration>
+                     <rules>
                         <!-- No plugin without version. -->
                         <requirePluginVersions>
-                           <message>Best Practice is to always define
-                              plugin versions!</message>
+                           <message><![CDATA[Best Practice is to always define plugin versions.]]></message>
                            <banLatest>true</banLatest>
                            <banRelease>true</banRelease>
                            <banSnapshots>true</banSnapshots>
                            <phases>clean,deploy,site,test,verify</phases>
                         </requirePluginVersions>
-                        <!-- Source encoding should be set. -->
-                        <requireProperty>
-                           <property>project.build.sourceEncoding</property>
-                           <message>Indicate the source encoding for the
-                              project.</message>
-                           <regex>.*</regex>
-                           <regexMessage>It should be a valid text
-                              encoding format.</regexMessage>
-                        </requireProperty>
-                        <!-- Report output encoding should be set. -->
-                        <requireProperty>
-                           <property>project.reporting.outputEncoding</property>
-                           <message>Indicate the encoding for the
-                              reporting output.</message>
-                           <regex>.*</regex>
-                           <regexMessage>It should be a valid text
-                              encoding format.</regexMessage>
-                        </requireProperty>
-                        <!-- Source JDK should be set. -->
-                        <requireProperty>
-                           <property>maven.compiler.source</property>
-                           <message>Indicate the source JDK.</message>
-                           <regex>\d+\.\d+[\.\d+]?.*</regex>
-                           <regexMessage>It should be a valid JDK
-                              version.</regexMessage>
-                        </requireProperty>
-                        <!-- Target JDK should be set. -->
-                        <requireProperty>
-                           <property>maven.compiler.target</property>
-                           <message>Indicate the target JDK.</message>
-                           <regex>\d+\.\d+[\.\d+]?.*</regex>
-                           <regexMessage>It should be a valid JDK
-                              version.</regexMessage>
-                        </requireProperty>
-                        <!-- Manifest name should be given. -->
-                        <requireProperty>
-                           <property>manifest.name</property>
-                           <message>Give a name for the manifest.</message>
-                           <regex>.*</regex>
-                           <regexMessage>It should be a valid name.</regexMessage>
-                        </requireProperty>
                      </rules>
                   </configuration>
+               </execution>
+               <execution>
+                  <id>enforce-manifest</id>
                   <goals>
                      <goal>enforce</goal>
                   </goals>
+                  <configuration>
+                     <rules>
+                        <!-- Manifest name should be given. -->
+                        <requireProperty>
+                           <property>manifest.name</property>
+                           <message><![CDATA[Give a name for the manifest.]]></message>
+                           <regex>.*</regex>
+                           <regexMessage><![CDATA[It should be a valid name.]]></regexMessage>
+                        </requireProperty>
+                     </rules>
+                  </configuration>
                </execution>
             </executions>
          </plugin>
@@ -988,6 +998,8 @@
             <configuration>
                <properties>
                   <property>
+                     <!-- Default listeners disabled to avoid conflicts with 
+                        TestNG -->
                      <name>usedefaultlisteners</name>
                      <key>false</key>
                   </property>
@@ -1000,21 +1012,18 @@
                   <!-- Path to the integration tests suite file -->
                   <suiteXmlFile>${project.build.testOutputDirectory}/tests_maven_integration_suite.xml</suiteXmlFile>
                </suiteXmlFiles>
-               <!-- To avoid memory problems when running the tests -->
-               <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
-                  -XX:PermSize=256m</argLine>
             </configuration>
             <executions>
+               <!-- Failsafe is bound to the integration-test and verify 
+                  phases -->
                <execution>
                   <id>failsafe-integration-tests</id>
-                  <phase>integration-test</phase>
                   <goals>
                      <goal>integration-test</goal>
                   </goals>
                </execution>
                <execution>
                   <id>failsafe-verify</id>
-                  <phase>verify</phase>
                   <goals>
                      <goal>verify</goal>
                   </goals>
@@ -1028,6 +1037,7 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${plugin.jacoco.version}</version>
             <executions>
+               <!-- Jacoco is bound to the initialize and verify phases -->
                <execution>
                   <id>jacoco-initialize</id>
                   <goals>
@@ -1036,7 +1046,6 @@
                </execution>
                <execution>
                   <id>jacoco-test-report</id>
-                  <phase>verify</phase>
                   <goals>
                      <goal>report</goal>
                   </goals>
@@ -1054,7 +1063,6 @@
                   <index>true</index>
                   <manifest>
                      <addClasspath>true</addClasspath>
-                     <addExtensions>false</addExtensions>
                      <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                      <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                      <packageName>${project.groupId}</packageName>
@@ -1072,6 +1080,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
             <version>${plugin.site.version}</version>
+            <configuration>
+               <!-- Relativizing the links has a tendency to break them -->
+               <relativizeDecorationLinks>false</relativizeDecorationLinks>
+            </configuration>
          </plugin>
          <plugin>
             <!-- Source -->
@@ -1079,6 +1091,7 @@
             <artifactId>maven-source-plugin</artifactId>
             <version>${plugin.source.version}</version>
             <executions>
+               <!-- Source plugin is bound to the deploy phase -->
                <execution>
                   <!-- Generates the jar for the deployment -->
                   <id>attach-sources</id>
@@ -1095,7 +1108,9 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>${plugin.javadoc.version}</version>
             <executions>
+               <!-- Javadoc plugin is bound to the deploy phase -->
                <execution>
+                  <!-- Generates the Javadocs for the deployment -->
                   <id>attach-javadocs</id>
                   <phase>deploy</phase>
                   <goals>
@@ -1111,9 +1126,9 @@
             <artifactId>maven-deploy-plugin</artifactId>
             <version>${plugin.deploy.version}</version>
             <executions>
+               <!-- Deploy plugin is bound to the deploy phase -->
                <execution>
                   <id>deploy</id>
-                  <phase>deploy</phase>
                   <goals>
                      <goal>deploy</goal>
                   </goals>
@@ -1133,9 +1148,10 @@
             <artifactId>maven-changes-plugin</artifactId>
             <version>${plugin.changes.version}</version>
             <executions>
+               <!-- Changes plugin is bound to the pre-site phase -->
                <execution>
                   <id>check-changes</id>
-                  <phase>verify</phase>
+                  <phase>pre-site</phase>
                   <goals>
                      <goal>changes-check</goal>
                   </goals>
@@ -1274,13 +1290,14 @@
             <reportSets>
                <reportSet>
                   <reports>
-                     <report>index</report>
                      <report>summary</report>
                      <report>license</report>
                      <report>modules</report>
                      <report>project-team</report>
+                     <report>dependencies</report>
                      <report>dependency-info</report>
                      <report>dependency-management</report>
+                     <report>distribution-management</report>
                      <report>plugins</report>
                      <report>plugin-management</report>
                   </reports>
@@ -1289,7 +1306,7 @@
          </plugin>
          <plugin>
             <!-- Dependency -->
-            <!-- Generates a list of used and unused dependencies. -->
+            <!-- Generates dependencies analysis report. -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>${plugin.dependency.version}</version>
@@ -1301,6 +1318,13 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jxr-plugin</artifactId>
             <version>${plugin.jxr.version}</version>
+         </plugin>
+         <plugin>
+            <!-- Site -->
+            <!-- Generates the Maven Site -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>${plugin.site.version}</version>
          </plugin>
          <plugin>
             <!-- Javadoc -->
@@ -1315,6 +1339,10 @@
                   </reports>
                </reportSet>
             </reportSets>
+            <configuration>
+               <!-- Excludes generated code -->
+               <excludePackageNames>*.generated.*</excludePackageNames>
+            </configuration>
          </plugin>
          <plugin>
             <!-- Changes -->
@@ -1383,6 +1411,8 @@
             <configuration>
                <!-- The customized rules file -->
                <configLocation>${project.basedir}/src/config/checkstyle/checkstyle-rules.xml</configLocation>
+               <!-- Excludes generated code -->
+               <excludes>**/generated/**/*</excludes>
             </configuration>
          </plugin>
          <plugin>
@@ -1415,8 +1445,13 @@
                   <excludeRoot>target/generated-sources/stubs</excludeRoot>
                </excludeRoots>
                <rulesets>
+                  <!-- The customized rules file -->
                   <ruleset>${project.basedir}/src/config/pmd/pmd-rules.xml</ruleset>
                </rulesets>
+               <excludes>
+                  <!-- Excludes generated code -->
+                  <exclude>**/generated/**/*</exclude>
+               </excludes>
             </configuration>
          </plugin>
          <plugin>
@@ -1428,7 +1463,7 @@
          </plugin>
          <plugin>
             <!-- JaCoCo -->
-            <!-- Generates the coverage report -->
+            <!-- Generates coverage reports from Surefire and Failsafe -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${plugin.jacoco.version}</version>
